[package]
name = "embassy-nats"
version = "0.1.0"
edition = "2024"
authors = [ "Eliseo Cailloux" ]

[dependencies]

embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-net = { version = "0.9.1", features = ["tcp", "dhcpv4", "defmt", "medium-ethernet", "proto-ipv6", "dns"] }

defmt = { version = "1.0", features = ["alloc"] }
defmt-rtt = "1.1"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-io-async = "0.7.0"

serde = { version = "1.0.228", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
debug = 2
